--- a/src/blocks/PictureSection/PictureSection.pug
+++ b/src/blocks/PictureSection/PictureSection.pug
@@ -6,5 +6,5 @@ mixin PictureSection(modifier)
         .PictureSection__content 
           h1.PictureSection__title.title Полет Илона Маска#[br]и DOGIE COIN
           p.PictureSection__text В прошлый четверг все офигели от полета DOGIE COIN на марс.
-          .PictureSection__button   
+          .PictureSection__button.Popup__open   
             +ClipButton('ОСТАВИТЬ ЗАЯВКУ')
