--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -4,3 +4,4 @@ include ../blocks/ClipButton/ClipButton.pug
 include ../blocks/PictureSection/PictureSection.pug
 include ../blocks/CardsSection/CardsSection.pug
 include ../blocks/Card/Card.pug
+include ../blocks/Popup/Popup.pug
