--- a/src/blocks/ClipButton/ClipButton.scss
+++ b/src/blocks/ClipButton/ClipButton.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    clip-path: polygon(92.30% 0.00%,82.49% 100%,41.24% 100.00%,0.00% 100.00%,9.52% 0.00%);;
+    clip-path: polygon(92.30% 0.00%,82.49% 100%,41.24% 100.00%,0.00% 100.00%,9.52% 0.00%);
     width: 100%;
     height: 100%;
     background: $clipButton-color;
