--- a/src/blocks/Header/Header.pug
+++ b/src/blocks/Header/Header.pug
@@ -11,5 +11,8 @@ mixin Header(modifier)
           .Header__menu
             +Menu('УСЛУГИ','АБОНЕМЕНТЫ','ПОЧЕМУ МЫ','ОБОРУДОВАНИЕ','АКЦИИ','FAQ','КОНТАКТЫ')
         .Header__right
-          .Header__button 
+          .Header__phone
+            a(href="tel:+70000000").Header__phone-link
+              include img/phone.svg
+          .Header__button.Popup__open 
             +ClipButton('ОСТАВИТЬ ЗАЯВКУ')
