--- a/src/blocks/Menu/Menu.scss
+++ b/src/blocks/Menu/Menu.scss
@@ -7,6 +7,12 @@
     @media (max-width: $descSmall) {
       gap: 24px;
     }
+
+    @media (max-width: $tab) {
+    flex-direction: column;
+    align-items: start;
+    gap: 15px;
+    }
   }
 
   &__link{
@@ -16,10 +22,21 @@
     line-height: 150%;
     text-decoration: none;
 
+    @include transition;
+
+    &:hover{
+      color: $clipButton-color;
+    }
+
     @media (max-width: $tab) {
       font-size: 36px;
       color: $back-color;
       -webkit-text-stroke: 1px $white-color;
+
+      &:hover{
+        color: $back-color;
+        -webkit-text-stroke: 1px $clipButton-color;
+      }
     }
   }
 }
