--- a/src/blocks/PictureSection/PictureSection.scss
+++ b/src/blocks/PictureSection/PictureSection.scss
@@ -6,6 +6,10 @@
     height: auto;
     object-fit: cover;
     border-radius: 50px 50px 0 0;
+
+    @media (max-width: $tab) {
+      height: 907px;
+    }
   }
 
   &__gradient{
