--- a/src/blocks/Header/Header.scss
+++ b/src/blocks/Header/Header.scss
@@ -31,12 +31,23 @@
 		@media (max-width: $descSmall) {
 			gap: 38px;
 		}
+
+		@media (max-width: $mob) {
+			gap: 0;
+			width: 100%;
+		}
 	}
 
 	&__left-block{
 		display: flex;
 		align-items: center;
 		gap: 91px;
+
+		@media (max-width: $mob) {
+			gap: 0;
+			width: 100%;
+			justify-content: space-between;
+		}
 	}
 
 	&__burger{
@@ -53,20 +64,62 @@
 	}
 
 	&__phone{
+		display: block;
+		text-decoration: none;
+	}
+
+	&__right{
 		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-		background-color: rgba($color: $white-color, $alpha: 0);
-		border: 1px solid $white-color;
-		width: 92px;
-		height: 60px;
+
+		@media (max-width:$mob) {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+
+	&__phone{
+		svg{
+			path{
+				@include transition;
+
+				&:nth-child(1){
+					@media (max-width:$mob) {
+						stroke: $back-color;
+					}
+				}
+			}
+		}
+		
+
+		&:hover{
+			svg{
+				path{
+					&:nth-child(1){
+						stroke: $clipButton-color;
+
+						@media (max-width:$mob) {
+							stroke: $back-color;
+						}
+					}
+					&:nth-child(2){
+						fill: $clipButton-color;
+					}
+				}
+			}
+		}
 	}
 
 	&__button{
 		width: 293px;
 		height: 60px;
+
+		@media (max-width:$mob) {
+			width: 100%;
+
+			&  .ClipButton__item{
+				display: none;
+			}
+		}
 	}
 
 	&__menu{
@@ -89,6 +142,12 @@
 				transition-delay: 0s;
 				z-index: 1;
 			}
+		}
+
+		@media (max-width:$mob) {
+			display: flex;
+			flex-direction: column;
+			gap: 51px;
 		}
 	}
 
