--- a/src/blocks/ClipButton/ClipButton.scss
+++ b/src/blocks/ClipButton/ClipButton.scss
@@ -1,14 +1,16 @@
 .ClipButton {
   height: inherit;
   width: 100%;
-  position: relative;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: start;
 
   &__button{
     display: flex;
     justify-content: center;
     align-items: center;
-    clip-path: polygon(90.30% 0.00%,82.49% 100%,41.24% 100.00%,3.00% 100.00%,9.52% 0.00%);
+    clip-path: polygon(97.40% 0.00%,91.50% 100%,41.24% 100.00%,3.00% 100.00%,9.52% 0.00%);
     width: 100%;
     height: 100%;
     background: $clipButton-color;
@@ -22,13 +24,10 @@
 
   &__item{
     display: block;
-    width: 6px;
-    height: 100px;
     background: $white-color;
-    position: absolute;
-    right: 32px;
-    top: -6px;
-    transform: rotate(21deg);
+    width: 5px;
+    height: 100px;
+    transform:  translateX(-9px) rotate(17deg);
   }
   
 }
