--- a/src/blocks/Header/Header.scss
+++ b/src/blocks/Header/Header.scss
@@ -4,7 +4,7 @@
 	&__container{
 		position: relative;
 		padding-top: 28px;
-		padding-bottom: 28px;
+		padding-bottom: 26px;
 
 		@media (max-width: $tab) {
 			padding-top: 30px;
@@ -74,43 +74,18 @@
 		@media (max-width:$mob) {
 			flex-direction: column;
 			align-items: center;
+			gap: 6px;
 		}
 	}
 
 	&__phone{
-		svg{
-			path{
-				@include transition;
-
-				&:nth-child(1){
-					@media (max-width:$mob) {
-						stroke: $back-color;
-					}
-				}
-			}
-		}
-		
-
-		&:hover{
-			svg{
-				path{
-					&:nth-child(1){
-						stroke: $clipButton-color;
-
-						@media (max-width:$mob) {
-							stroke: $back-color;
-						}
-					}
-					&:nth-child(2){
-						fill: $clipButton-color;
-					}
-				}
-			}
+		img{
+			width: 100%;
 		}
 	}
 
 	&__button{
-		width: 293px;
+		width: 302px;
 		height: 60px;
 
 		@media (max-width:$mob) {
