--- a/src/blocks/PictureSection/PictureSection.scss
+++ b/src/blocks/PictureSection/PictureSection.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    border-radius: 50px 50px 0 0;
+    border-radius: 20px 20px 0 0;
 
     @media (max-width: $tab) {
       height: 907px;
@@ -26,7 +26,7 @@
 
   &__container{
     padding-top: 158px;
-    padding-bottom: 96px;
+    padding-bottom: 140px;
 
     @media (max-width: $tab) {
       padding-top: 124px;
@@ -59,5 +59,9 @@
   &__button{
     width: 293px;
     height: 60px;
+
+    .ClipButton__button{
+      clip-path: polygon(97.4% 0%, 91.5% 100%, 70.24% 99%, 0% 100%, 6.52% 0%);
+    }
   }
 }
