--- a/src/blocks/PictureSection/PictureSection.scss
+++ b/src/blocks/PictureSection/PictureSection.scss
@@ -30,12 +30,14 @@
 
     @media (max-width: $tab) {
       padding-top: 124px;
-      padding-bottom: 76px;
+      padding-bottom: 81px;
+      padding-left: 49px;
     }
 
     @media (max-width: $mob) {
       padding-top: 52px;
-      padding-bottom: 52px;
+      padding-bottom: 51px;
+      padding-left: 12px;
     }
   }
 
@@ -45,7 +47,7 @@
     gap: 40px;
 
     @media (max-width: $mob) {
-      gap: 20px;
+      gap: 17px;
     }
   }
 
@@ -54,6 +56,10 @@
     font-size: px-to-em(16);
     font-weight: 400;
     line-height: 150%;
+
+    @media (max-width: $tab) {
+      max-width: 447px;
+    }
   }
 
   &__button{
@@ -62,6 +68,16 @@
 
     .ClipButton__button{
       clip-path: polygon(97.4% 0%, 91.5% 100%, 70.24% 99%, 0% 100%, 6.52% 0%);
+    }
+
+    @media (max-width: $mob) {
+      width: 228px;
+      height: 46.689px;
+
+      .ClipButton__item{
+        transform: translateX(-8px) rotate(17deg);
+        width: 4px;
+      }
     }
   }
 }
